<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Let\'s Go!</string>

    <string name="bill_helper">Enter Bill</string>
    <string name="tip_helper">Select Tip %</string>
    <string name="tip_Total">Tip</string>
    <string name="total">Total</string>

    <string name="radio10">10%</string>
    <string name="radio15">15%</string>
    <string name="radio18">18%</string>
    <string name="radio20">20%</string>
    <string name="radio25">25%</string>

    <string name="currency_placeholder">0.00</string>

</resources>
