<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/bgColor">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/billAmt"
        android:layout_marginTop="78dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tip_helper"
        android:id="@+id/textView"
        android:layout_below="@+id/billHelper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/bill_helper"
        android:id="@+id/billHelper"
        android:layout_below="@+id/billAmt"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tip_Total"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_toLeftOf="@+id/billHelper"
        android:layout_toStartOf="@+id/billHelper"
        android:layout_marginTop="39dp"
        android:textSize="@dimen/portrait_answers" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total"
        android:id="@+id/textView3"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/tipAmtField"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:textSize="@dimen/portrait_answers" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/currency_placeholder"
        android:id="@+id/tipAmtField"
        android:textSize="@dimen/portrait_answers"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/currency_placeholder"
        android:id="@+id/mealTotalField"
        android:textColor="@color/green"
        android:background="@color/bgColor"
        android:textSize="@dimen/portrait_answers"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignLeft="@+id/tipAmtField"
        android:layout_alignStart="@+id/tipAmtField" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignTop="@+id/billAmt"
        android:checkedButton="@+id/select10"
        android:baselineAligned="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio10"
            android:id="@+id/select10"
            android:onClick="onRadioButtonClicked"
            android:textSize="@dimen/portrait_radio_text" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio15"
            android:id="@+id/select15"
            android:onClick="onRadioButtonClicked"
            android:textSize="@dimen/portrait_radio_text" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio18"
            android:id="@+id/select18"
            android:onClick="onRadioButtonClicked"
            android:textSize="@dimen/portrait_radio_text" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio20"
            android:id="@+id/select20"
            android:onClick="onRadioButtonClicked"
            android:textSize="@dimen/portrait_radio_text" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio25"
            android:id="@+id/select25"
            android:onClick="onRadioButtonClicked"
            android:textSize="@dimen/portrait_radio_text" />
    </RadioGroup>

</RelativeLayout>
